# android-ndk-fetch-example

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  fetch.cpp  log_forwarder.c
app/src/main/kotlin/com/doomhowl/fetchexample/: FetchExampleActivity.kt
app/src/main/res/layout/: activity_example_jni.xml
app/src/main/res/values/: strings.xml  styles.xml
gradle/: libs.versions.toml
